fix h4 spacing issue

--- a/static/css/kube.css
+++ b/static/css/kube.css
@@ -287,7 +287,7 @@ h3,
 .h3,
 h4,
 .h4 {
-  line-height: 1.3;
+  line-height: 1.4;
 }
 h1,
 .h1 {
@@ -3501,7 +3501,7 @@ ul.dropdown li.divider {
   }
   h4 {
     font-size: 1.125em;
-    line-height: 1.22222222;
+    line-height: 1.4;
   }
   h5 {
     font-size: 1em;
@@ -3526,7 +3526,7 @@ ul.dropdown li.divider {
   }
   h4 {
     font-size: 1.125em;
-    line-height: 1.11111111;
+    line-height: 1.333333;
   }
   h5 {
     font-size: 1em;
